# vox-commander

./: .env.example  .gitignore  README.md  vox-commander.bat  vox-demo.bat
docs/: DEMO_VIDEO_SCRIPT.md  HACKATHON_DESCRIPTION.md  SUBMISSION_PITCH.md
docs/superpowers/plans/: 2026-05-13-vox-commander-plan.md
docs/superpowers/specs/: 2026-05-13-vox-commander-design.md
openhv-mod/OpenRA.Mods.HV/Traits/: VoxGrid.cs  VoxLabels.cs
openhv-mod/OpenRA.Mods.HV/Traits/World/: VoxBridge.cs
openhv-mod/OpenRA.Mods.HV/Widgets/Logic/: MinimapGridLabelsLogic.cs  VoxDemoPanelLogic.cs  VoxPanelLogic.cs
openhv-mod/mods/hv/chrome/: ingame-player.yaml  ingame.yaml
openhv-mod/mods/hv/maps/vox-demo/: map.yaml  rules.yaml
openhv-mod/mods/hv/rules/: defaults.yaml  world.yaml
voice-service/: pyproject.toml
voice-service/scripts/: cli_send.py  create_agent.py  generate_commander_audio.py  generate_intro_audio.py  generate_xo_audio.py  update_agent.py  verify_agent.py
voice-service/src/vox/: agent_client.py  audio.py  commentator.py  fastpath.py  game_socket.py  main.py  panel.py  protocol.py  refs.py  session_log.py  sync_bridge.py  tools.py
voice-service/tests/: test_commentator.py  test_fastpath.py  test_game_socket.py  test_protocol.py  test_refs.py
